# OpenGL-depth-test

./: CMakeLists.txt  README.md  run.sh
src/: main.c
